[package]
name = "paillier"
version = "0.2.1-alpha.0"





[dependencies]
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"

[dev-dependencies]
bencher = "0.1"
rand = "0.5"
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false
