[package]
name = "paillier"
version = "0.2.1-alpha.0"
edition = "2018"

[dependencies]
num-traits = "0.2"
rand = "0.6"
rayon = "1.1"
serde =  { version = "1.0", features = ["derive"] }
bit-vec = "0.6"
rust-gmp = { version = "0.5", optional=true }
rust-crypto = { version = "^0.2", optional = true }
hex = { version = "^0.3", optional = true }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
